# octo-couscous

./: .pre-commit-config.yaml  Cargo.toml
.github/workflows/: ci.yml
dummy_client/: Cargo.toml
dummy_client/src/: main.rs
godot_lib/: Cargo.toml
godot_lib/src/: lib.rs
map_plugin/: Cargo.toml
map_plugin/src/: events.rs  lib.rs
map_plugin/src/components/: mod.rs
map_plugin/src/resources/: map.rs  mod.rs
map_plugin/src/systems/: mod.rs
protos/: Cargo.toml
protos/src/: lib.rs  messages.proto
server/: Cargo.toml
server_plugin/: Cargo.toml
server_plugin/src/: lib.rs
src/: main.rs
src/client/: main.rs
src/server/: main.rs
