[package]
name = "octo-couscous"
version = "0.1.0"
edition = "2021"
default-run = "server"

[dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
bevy_renet = "0.0.12"
rand = "0.8.5"
map_plugin = { path = "map_plugin" }

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"
